added cards agains humanity in lobby

--- a/views/lobby/partials/games.ejs
+++ b/views/lobby/partials/games.ejs
@@ -7,3 +7,8 @@
 	<a href='sy'><img src='/img/sy/scotland-yard.jpeg'/></a>
 </div>
 <div class="card moveBtn" id="gamecardMoveBtn1"><img src="/img/lobby/move.png"/></div>
+
+<div class="gamecard" id='gamecard2'>
+  <a href='cah'><img src='/img/cah/cah.png'/></a>
+</div>
+<div class="card moveBtn" id="gamecardMoveBtn2"><img src="/img/lobby/move.png"/></div>
