--- a/views/lobby/partials/games.ejs
+++ b/views/lobby/partials/games.ejs
@@ -12,3 +12,8 @@
   <a href='cah'><img src='/img/cah/cah.png'/></a>
 </div>
 <div class="card moveBtn" id="gamecardMoveBtn2"><img src="/img/lobby/move.png"/></div>
+
+<div class="gamecard" id='gamecard3'>
+  <a href='rmk'><img src='/img/rmk/rummikub.svg'/></a>
+</div>
+<div class="card moveBtn" id="gamecardMoveBtn3"><img src="/img/lobby/move.png"/></div>
