--- a/views/sh/partials/playerboxes.ejs
+++ b/views/sh/partials/playerboxes.ejs
@@ -11,5 +11,5 @@
 
 
 <% for (var i = 0; i < 10;  i++ ) { %>
-	<div class=playerbox id="player<%= i %>box" style="top: <%= playerboxStartPos[i].top %>px; left: <%= playerboxStartPos[i].left %>px"><div class="playerName"><span class="playerNameText" id="player<%= i %>NameText"></span></div></div>
+	<div class="playerbox" id="player<%= i %>box" style="top: <%= playerboxStartPos[i].top %>px; left: <%= playerboxStartPos[i].left %>px"><div class="playerName"><span class="playerNameText" id="player<%= i %>NameText"></span></div></div>
 <% } %>
