--- a/views/sh/partials/head.ejs
+++ b/views/sh/partials/head.ejs
@@ -77,11 +77,12 @@
 
 	.playerName
 	{
-		position: relative;
+		position: absolute;
 		width: 300px;
 		height: 20px;
 		top: 20px;
 		text-align: center;
+    z-index: 10;
 		
 	}
 
@@ -90,7 +91,7 @@
 		padding: 10px;
 		font-size: 20px;
 		font-weight: bold;
-		background-color: white;
+		background-color: #ffffff5e;
 		border: 1px solid black;
 		display: inline-block;
 		border-radius: 3px;
