--- a/views/lobby/partials/games.ejs
+++ b/views/lobby/partials/games.ejs
@@ -4,7 +4,7 @@
 <div class="card moveBtn" id="gamecardMoveBtn0"><img src="/img/lobby/move.png"/></div>
 
 <div class="gamecard" id='gamecard1'>
-	<a href='sy'><img src='/img/sy/scotland-yard.jpeg'/></a>
+	<a href='sy'><img src='/img/sy/scotland-yard.svg'/></a>
 </div>
 <div class="card moveBtn" id="gamecardMoveBtn1"><img src="/img/lobby/move.png"/></div>
 
