--- a/views/rmk/pages/index.ejs
+++ b/views/rmk/pages/index.ejs
@@ -3,13 +3,13 @@
     <%- include ("../partials/head") %>
   </head>
   <body>
-    <%- include ('../partials/welcomeModal'); -%>
-    <%- include ('../partials/resetModal'); -%>
+    <%- include ('../../common/welcomeModal'); -%>
+    <%- include ('../../common/resetModal'); -%>
     <div class="scaleplane">
       <%- include ('../partials/playerboxes', {playerboxStartPos: playerboxStartPos}); -%>
-      <%- include ('../partials/webcams', {webcamPos: webcamPos}); -%>
+      <%- include ('../../common/webcams', {webcamPos: webcamPos, fixedPlayers:fixedPlayers}); -%>
       <%- include ('../partials/decks') %>
-      <%- include ('../partials/cursors'); -%>
+      <%- include ('../../common/cursors'); -%>
     </div>
   </body>
 </html>
