--- a/views/sy/pages/index.ejs
+++ b/views/sy/pages/index.ejs
@@ -3,16 +3,16 @@
 		<%- include ("../partials/head") %>
 	</head>
 	<body>
-		<%- include ('../partials/welcomeModal'); -%>
-		<%- include ('../partials/resetModal'); -%>
+		<%- include ('../../common/welcomeModal'); -%>
+		<%- include ('../../common/resetModal'); -%>
 		<div class="scaleplane">
 			<%- include ('../partials/map'); -%>
-			<%- include ('../partials/webcams', {webcamPos: webcamPos}) -%>
+			<%- include ('../../common/webcams', {webcamPos: webcamPos, fixedPlayers: fixedPlayers}) -%>
 			<%- include ('../partials/mrx-board'); -%>
 			<%- include ("../partials/decks") -%>
 			<%- include ("../partials/tickets") -%>
 			<%- include ('../partials/pions'); -%>
-			<%- include ("../partials/cursors") -%>
+			<%- include ("../../common/cursors") -%>
 		</div>
 	</body>
 </html>
