progress on citadels

--- a/views/ctd/partials/head.ejs
+++ b/views/ctd/partials/head.ejs
@@ -15,8 +15,8 @@
 <style>
   body
   {
-    overflow: hidden;
-    background-image: url(/img/sh/tweed.png)
+    background-color: #100900;
+    background-image: url(/img/ctd/paper-3.png)
   }
   
   .scaleplane
@@ -61,7 +61,7 @@
   .playerbox
   {
     position: absolute;
-    width: 300px;
+    width: 274px;
     height: 300px;
     background-color: #CCCCCC;
     opacity: 0.5;
@@ -72,7 +72,7 @@
   .playerName
   {
     position: absolute;
-    width: 300px;
+    width: 274px;
     height: 20px;
     top: 20px;
     text-align: center;
@@ -94,6 +94,28 @@
   .card
   {
     position: absolute;
+  }
+
+  .characterCard
+  {
+    width: 265px;
+    height: 50px;
+    border-radius: 10px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 40px;
+  }
+
+  .cN
+  {
+    background-color: #000000AA;
+    padding: 13px;
+    border-radius: 27px;
+    top: 2px;
+    position: relative;
+    left: -74px;
+    color:white;
   }
 
   .openbox
@@ -137,5 +159,18 @@
   .webcamContainer
   {
     transform-origin: 50% 0
+  }
+
+  #charactersCard
+  {
+    width: 550px;
+    padding: 10px;
+    border-radius: 11px;
+    background-color: #d8d8d8;
+  }
+
+  .characterTitle
+  {
+    font-weight: bold;
   }
 </style>
