fix bug in reconnect

--- a/views/ctd/partials/head.ejs
+++ b/views/ctd/partials/head.ejs
@@ -107,6 +107,11 @@
     line-height: 40px;
   }
 
+  .characterCard span
+  {
+    width: 265px;
+  }
+
   .cN
   {
     background-color: #000000AA;
