--- a/views/ctd/pages/index.ejs
+++ b/views/ctd/pages/index.ejs
@@ -8,6 +8,7 @@
     <div class="scaleplane">
       <%- include ('../partials/playerboxes', {playerboxStartPos: playerboxStartPos}) -%>
       <%- include ('../../common/webcams', {webcamPos: webcamPos, fixedPlayers:fixedPlayers}) -%>
+      <%- include ('../partials/decks') %>
       <%- include ('../partials/charactersCard') %>
       <%- include ('../partials/characterCards') %>
       <%- include ("../../common/cursors") -%>
