added citadels to games

--- a/views/ctd/pages/index.ejs
+++ b/views/ctd/pages/index.ejs
@@ -10,7 +10,9 @@
       <%- include ('../../common/webcams', {webcamPos: webcamPos, fixedPlayers:fixedPlayers}) -%>
       <%- include ('../partials/decks') %>
       <%- include ('../partials/charactersCard') %>
+      <%- include ('../partials/districtCards') %>
       <%- include ('../partials/characterCards') %>
+      <%- include ('../partials/goldAndCrown') %>
       <%- include ("../../common/cursors") -%>
     </div>
   </body>
