--- a/views/ctd/partials/charactersCard.ejs
+++ b/views/ctd/partials/charactersCard.ejs
@@ -18,3 +18,67 @@
     </tr>
   </table>
 </div>
+
+<div class='card' id='scoring'>
+  <span>Scoring</span><br>
+  When a player builds his eighth district, the game ends after the current round is completed. At the end of the game, each player receives points for all of the following:
+  <ul>
+    <li>A player receives a number of points equal to the total combined gold cost of all the district cards in his city at the end of the game.</li>
+    <li>If a player has at least one district in each of the five colors, he receives 3 extra points.</li>
+    <li>All other players that have managed to build eight districts at the end of the game receive 2 extra points.</li>
+  </ul>
+</div>
+
+<div class='card' id='onyourturn'>
+  <ol>
+    <li><span>Take an Action:</span> At the beginning of your turn, you must either
+      <ul>
+        <li>take two gold from the bank,</li>
+        <li>or draw two district cards from the District Deck, choose one to put in your hand, and put the other on the discard Deck.
+      </ul>
+    </li>
+    <li><span>Build a District Card:</span> You may build one district card into your city. In order to do so, you must pay the cost of the district, in gold, to the bank.
+    </li>
+  </ol>
+  <ul>
+    <li><span>Use Character Ability</span> You may use your character's power once, at any time, during your turn.</li>
+  </ul>
+</div>
+
+<div class='card' id='specialDistricts'>
+  <ul>
+    <li>
+      <span>Haunted City</span> For the purposes of victory points, the Haunted City is conisdered to be of the color of your choice. You cannot use this ability if you built it during the last round of the game.
+    </li>
+    <li>
+      <span>Keep</span> The Keep cannot be destroyed by the Warlord.
+    </li>
+    <li>
+      <span>Laboratory</span> Once during your turn, you may discard a district card from your hand and receive one gold from the bank
+    </li>
+    <li>
+      <span>Smithy</span> Once during your turn, you may pay two gold to draw 3 district cards.
+    </li>
+    <li>
+      <span>Observatory</span> If you choose to draw cards when you take an action, you draw 3 cards, keep one of your choice, and put the other 2 on the bottom of the deck
+    </li>
+    <li>
+      <span>Graveyard</span> When the Warlord destroys a district, you may pay one gold to take the destroyed district into your hand. You may not do this if you are the Warlord.
+    </li>
+    <li>
+      <span>Dragon Gate</span> This district costs 6 gold to build, but is worth 8 points at the end of the game.
+    </li>
+    <li>
+      <span>University</span> This district costs 6 gold to build, but is worth 8 points at the end of the game.
+    </li>
+    <li>
+      <span>Library</span> If you choose to draw cards before you take an action, you keep both of the cards you have drawn.
+    </li>
+    <li>
+      <span>Great Wall</span> The cost for the Warlord to destory any of your other districts is increased by one gold.
+    </li>
+    <li>
+      <span>School of Magic</span> This district costs 6 gold to build, but is worth 8 points at the end of the game.
+    </li>
+  </ul>
+</div>
