--- a/views/ctd/partials/decks.ejs
+++ b/views/ctd/partials/decks.ejs
@@ -1,1 +1,5 @@
-<div class='card deck charactersDeck' id='charactersDeck0'><button type="button" class="btn btn-primary btn-lg shuffleButton" style="width: 110px;">Shuffle</button><button type="button" class="btn btn-primary btn-lg inspectDeckButton" style="width: 110px;">Inspect</button></div>
+<div class='card deck charactersDeck' id='charactersDeck0'><button type="button" class="btn btn-primary btn-lg shuffleButton" style="width: 110px;" value="300">Shuffle</button><button type="button" class="btn btn-primary btn-lg inspectDeckButton" style="width: 110px;">Inspect</button></div>
+
+<div class='card deck districtsDeck' id='distrctsDeck0'><button type="button" class="btn btn-primary btn-lg shuffleButton" style="width: 110px;">Shuffle</button></div>
+
+<div class='card deck districtsDeck' id='distrctsDeck1'><button type="button" class="btn btn-primary btn-lg shuffleButton" style="width: 110px;">Shuffle</button></div>
