--- a/views/ctd/partials/characterCards.ejs
+++ b/views/ctd/partials/characterCards.ejs
@@ -1,3 +1,3 @@
 <% for (var i = 1; i <= 8; i++) { -%>
-  <div class="card characterCard" id="c<%= i %>"><span></span></div>
+  <div class="card characterCard" id="c<%= i %>"><span class=characterText></span></div>
 <% } -%>
