--- a/views/ctd/partials/head.ejs
+++ b/views/ctd/partials/head.ejs
@@ -98,7 +98,7 @@
 
   .characterCard
   {
-    width: 265px;
+    width: 240px;
     height: 50px;
     border-radius: 10px;
     text-align: center;
@@ -107,20 +107,58 @@
     line-height: 40px;
   }
 
+  .characterText
+  {
+    display: inline-block;
+  }
+
   .characterCard span
   {
-    width: 265px;
+    width: 232px;
+  }
+
+  .districtCard
+  {
+    height: 36px;
+    width: 172px;
+    //writing-mode: vertical-lr;
+    //text-orientation: sideways;
+    border-radius: 10px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 28px;
+  }
+
+  .characterCard span
+  {
+    width: 192px;
   }
 
   .cN
   {
     background-color: #000000AA;
-    padding: 13px;
-    border-radius: 27px;
-    top: 2px;
-    position: relative;
-    left: -74px;
-    color:white;
+    padding: 4px;
+    border-radius: 11px;
+    top: -3px;
+    position: absolute;
+    left: -4px;
+    color: white;
+    width: 50px !important;
+  }
+
+  .cost
+  {
+    background-color: #ffe000;
+    padding: 1px;
+    border: 3px solid black;
+    border-radius: 11px;
+    top: -3px;
+    position: absolute;
+    left: 149px;
+    color: black;
+    width: 36px !important;
+    text-orientation: upright;
   }
 
   .openbox
@@ -134,6 +172,18 @@
     background-color: #b9b9b9;
     border-radius: 3px;
     border: 1px solid black;
+  }
+
+  .charactersDeck
+  {
+    width: 500px;
+    height: 144px;
+  }
+
+  .districtsDeck
+  {
+    width: 211px;
+    height: 128px;
   }
 
   .webcambox
@@ -172,6 +222,45 @@
     padding: 10px;
     border-radius: 11px;
     background-color: #d8d8d8;
+  }
+
+  #scoring
+  {
+    width: 400px;
+    padding: 10px;
+    border-radius: 11px;
+    background-color: #d8d8d8;
+  }
+
+  #scoring span
+  {
+    font-weight: bold;
+  }
+
+  #onyourturn
+  {
+    width: 400px;
+    padding: 10px;
+    border-radius: 11px;
+    background-color: #d8d8d8;
+  }
+
+  #onyourturn span
+  {
+    font-weight: bold;
+  }
+
+  #specialDistricts
+  {
+    width: 1050px;
+    padding: 10px;
+    border-radius: 11px;
+    background-color: #d8d8d8;
+  }
+
+  #specialDistricts span
+  {
+    font-weight: bold;
   }
 
   .characterTitle
