added citadels to lobby

--- a/views/lobby/partials/games.ejs
+++ b/views/lobby/partials/games.ejs
@@ -17,3 +17,8 @@
   <a href='rmk'><img src='/img/rmk/rummikub.svg'/></a>
 </div>
 <div class="card moveBtn" id="gamecardMoveBtn3"><img src="/img/lobby/move.png"/></div>
+
+<div class="gamecard" id='gamecard4'>
+  <a href='ctd'><img src='/img/ctd/citadels.svg'/></a>
+</div>
+<div class="card moveBtn" id="gamecardMoveBtn4"><img src="/img/lobby/move.png"/></div>
