--- a/views/ctd/partials/districtCards.ejs
+++ b/views/ctd/partials/districtCards.ejs
@@ -1,3 +1,3 @@
 <% for (var i = 0; i < 66; i++) { -%>
-  <div class="card districtCard" id="d<%= i %>"><span></span></div>
+  <div class="card districtCard" id="d<%= i %>"><span class="cost" id="d<%= i %>_sec"></span><span class="districtText" id="d<%= i %>_text"></span></div>
 <% } -%>
