--- a/views/rmk/partials/decks.ejs
+++ b/views/rmk/partials/decks.ejs
@@ -2,30 +2,30 @@
 
 <% for (var j = 0; j < 2; j++) { -%>
   <% for (var i = 1; i <= 13; i++) { -%>
-    <div class='card tile' id="blue_<%= j %>_<%= i%>"><span></span></div>
+    <div class='card tile' id="blue_<%= j %>_<%= i%>"><span id="blue_<%= j %>_<%= i%>_text"></span></div>
   <% } -%>
 <% } -%>
 
 <% for (var j = 0; j < 2; j++) { -%>
   <% for (var i = 1; i <= 13; i++) { -%>
-    <div class='card tile' id="orange_<%= j %>_<%= i%>"><span></span></div>
+    <div class='card tile' id="orange_<%= j %>_<%= i%>"><span id="orange_<%= j %>_<%= i%>_text"></span></div>
   <% } -%>
 <% } -%>
 
 <% for (var j = 0; j < 2; j++) { -%>
   <% for (var i = 1; i <= 13; i++) { -%>
-    <div class='card tile' id="red_<%= j %>_<%= i%>"><span></span></div>
+    <div class='card tile' id="red_<%= j %>_<%= i%>"><span id="red_<%= j %>_<%= i%>_text"></span></div>
   <% } -%>
 <% } -%>
 
 <% for (var j = 0; j < 2; j++) { -%>
   <% for (var i = 1; i <= 13; i++) { -%>
-    <div class='card tile' id="black_<%= j %>_<%= i%>"><span></span></div>
+    <div class='card tile' id="black_<%= j %>_<%= i%>"><span id="black_<%= j %>_<%= i%>_text"></span></div>
   <% } -%>
 <% } -%>
 
 <% for (var i = 0; i < 2; i++) { -%>
-  <div class='card tile' id="j_<%= i%>"><span></span></div>
+  <div class='card tile' id="j_<%= i%>"><span id="j_<%= j %>_<%= i%>_text"></span></div>
 <% } -%>
 
 <div class='openbox' id='openbox0'></div>
