--- a/views/mainpage/partials/head.ejs
+++ b/views/mainpage/partials/head.ejs
@@ -10,6 +10,17 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
 <script src='/js/bootstrap.min.js'></script>
 <script src='/js/mainpage/main.js'></script>
+<script src='/js/mainpage/volume-meter.js'></script>
+<script src='/js/mainpage/mic_volume.js'></script>
 
 <style>
+  .webcam
+  {
+    text-align: center;
+  }
+
+  .checkDevicesBox
+  {
+    text-align: center;
+  }
 </style>
