added link to github

--- a/views/mainpage/pages/index.ejs
+++ b/views/mainpage/pages/index.ejs
@@ -13,5 +13,6 @@
 		<%- include ("../partials/createModal") %>
 		<button class='btn btn-primary' id="joinBtn">Join</button> or <button class='btn btn-success' id="createBtn">Create</button> 
 		<%- include ("../partials/gameRooms", {gameRooms: gameRooms}) %>
+    <%- include ("../partials/github") %>
 	</body>
 </html>
