added 'a fake artist goes to new york'

--- a/views/ctd/partials/charactersCard.ejs
+++ b/views/ctd/partials/charactersCard.ejs
@@ -24,6 +24,7 @@
   When a player builds his eighth district, the game ends after the current round is completed. At the end of the game, each player receives points for all of the following:
   <ul>
     <li>A player receives a number of points equal to the total combined gold cost of all the district cards in his city at the end of the game.</li>
+    <li>The first player to build eight districts receives 4 extra points.</li>
     <li>If a player has at least one district in each of the five colors, he receives 3 extra points.</li>
     <li>All other players that have managed to build eight districts at the end of the game receive 2 extra points.</li>
   </ul>
