--- a/views/lobby/partials/games.ejs
+++ b/views/lobby/partials/games.ejs
@@ -22,3 +22,8 @@
   <a href='ctd'><img src='/img/ctd/citadels.svg'/></a>
 </div>
 <div class="card moveBtn" id="gamecardMoveBtn4"><img src="/img/lobby/move.png"/></div>
+
+<div class="gamecard" id='gamecard5'>
+  <a href='fkar'><img src='/img/fkar/fake_artist.svg'/></a>
+</div>
+<div class="card moveBtn" id="gamecardMoveBtn5"><img src="/img/lobby/move.png"/></div>
