--- a/views/sy/partials/head.ejs
+++ b/views/sy/partials/head.ejs
@@ -94,13 +94,14 @@
 	.cursor
 	{
 		position: absolute;
-		left: 20000px;
+		left: 0px;
 		top: 0px;
 		width: 20px;
 		height: 20px;
 		border-radius: 10px;
 		border: 1px solid black;
 		z-index: 1000;
+    display: none;
 	}
 
 	.webcambox
