--- a/views/fkar/partials/head.ejs
+++ b/views/fkar/partials/head.ejs
@@ -1,7 +1,7 @@
 <!-- views/partials/head.ejs -->
 <meta charset="UTF-8">
 <!-- <meta name="viewport" content="width=device-width,user-scalable=no"> -->
-<title>Citadels - Sandboard</title>
+<title>Fake Artist goes to New York - Sandboard</title>
 
 <!-- Bootstrap CSS -->
 <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -9,14 +9,15 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
 <script src='/js/bootstrap.min.js'></script>
-<script src="/js/ctd/ctd.js"></script>
+<script src="/js/textFit.min.js"></script>
+<script src="/js/fkar/fkar.js"></script>
 <script src="/js/bundle.js"></script>
 
 <style>
   body
   {
-    background-color: #100900;
-    background-image: url(/img/ctd/paper-3.png)
+    background-color: #d1d3ff;
+    background-image: url("/img/fkar/cartographer.png");
   }
   
   .scaleplane
@@ -30,7 +31,7 @@
   .webcam
   {
     position: absolute;
-    width: 274px;
+    width: 250px;
     height: 300px;
     border: 1px solid black;
     overflow: hidden;
@@ -39,6 +40,12 @@
   .webcam video
   {
     height: 300px;
+    //margin-left: -75px;
+  }
+
+  .track
+  {
+    position: fixed
   }
 
   .cursor
@@ -62,8 +69,8 @@
   .playerbox
   {
     position: absolute;
-    width: 274px;
-    height: 300px;
+    width: 270px;
+    height: 320px;
     background-color: #CCCCCC;
     opacity: 0.5;
     border-radius: 4px;
@@ -73,7 +80,7 @@
   .playerName
   {
     position: absolute;
-    width: 274px;
+    width: 250px;
     height: 20px;
     top: 20px;
     text-align: center;
@@ -97,69 +104,18 @@
     position: absolute;
   }
 
-  .characterCard
+  .playcard
   {
-    width: 240px;
-    height: 50px;
-    border-radius: 10px;
-    text-align: center;
-    font-weight: bold;
-    font-size: 22px;
-    line-height: 40px;
-  }
-
-  .characterText
-  {
-    display: inline-block;
-  }
-
-  .characterCard span
-  {
-    width: 232px;
-  }
-
-  .districtCard
-  {
-    height: 36px;
-    width: 172px;
-    //writing-mode: vertical-lr;
-    //text-orientation: sideways;
-    border-radius: 10px;
-    text-align: center;
-    font-weight: bold;
-    font-size: 15px;
-    line-height: 28px;
-  }
-
-  .characterCard span
-  {
-    width: 192px;
-  }
-
-  .cN
-  {
-    background-color: #000000AA;
-    padding: 4px;
+    width: 170px;
+    height: 100px;
+    padding: 10px;
     border-radius: 11px;
-    top: -3px;
-    position: absolute;
-    left: -4px;
-    color: white;
-    width: 50px !important;
+    text-align: center;
   }
 
-  .cost
+  .ballot img
   {
-    background-color: #ffe000;
-    padding: 1px;
-    border: 3px solid black;
-    border-radius: 11px;
-    top: -3px;
-    position: absolute;
-    left: 149px;
-    color: black;
-    width: 36px !important;
-    text-orientation: upright;
+    height: 75px;
   }
 
   .openbox
@@ -168,23 +124,35 @@
     border: 5px solid #77ff77;
   }
 
+  .policy img
+  {
+    height: 120px;
+  }
+
+  .token img
+  {
+    width: 250px;
+  }
+
   .deck
   {
+    //width: 600px;
+    //height: 600px;
     background-color: #b9b9b9;
     border-radius: 3px;
     border: 1px solid black;
   }
 
-  .charactersDeck
+  .policydeck
   {
-    width: 500px;
-    height: 144px;
+    width: 160px;
+    height: 207px;
   }
 
-  .districtsDeck
+  .rolecardsdeck
   {
-    width: 211px;
-    height: 128px;
+    width: 207px;
+    height: 185px;
   }
 
   .webcambox
@@ -217,55 +185,12 @@
     transform-origin: 50% 0
   }
 
-  #charactersCard
+  #drawCanvas
   {
-    width: 550px;
-    padding: 10px;
-    border-radius: 11px;
-    background-color: #d8d8d8;
-  }
-
-  #scoring
-  {
-    width: 400px;
-    padding: 10px;
-    border-radius: 11px;
-    background-color: #d8d8d8;
-  }
-
-  #scoring span
-  {
-    font-weight: bold;
-  }
-
-  #onyourturn
-  {
-    width: 400px;
-    padding: 10px;
-    border-radius: 11px;
-    background-color: #d8d8d8;
-  }
-
-  #onyourturn span
-  {
-    font-weight: bold;
-  }
-
-  #specialDistricts
-  {
-    width: 1050px;
-    padding: 10px;
-    border-radius: 11px;
-    background-color: #d8d8d8;
-  }
-
-  #specialDistricts span
-  {
-    font-weight: bold;
-  }
-
-  .characterTitle
-  {
-    font-weight: bold;
+    position: absolute;
+    top: 100px;
+    left: 100px;
+    background-color: #FFFFFF;
+    border: 2px solid #000000;
   }
 </style>
