--- a/views/lobby/partials/games.ejs
+++ b/views/lobby/partials/games.ejs
@@ -27,3 +27,8 @@
   <a href='fkar'><img src='/img/fkar/fake_artist.svg'/></a>
 </div>
 <div class="card moveBtn" id="gamecardMoveBtn5"><img src="/img/lobby/move.png"/></div>
+
+<div class="gamecard" id='gamecard6'>
+  <a href='strg'><img src='/img/strg/stratego.svg'/></a>
+</div>
+<div class="card moveBtn" id="gamecardMoveBtn6"><img src="/img/lobby/move.png"/></div>
