--- a/views/scbl/partials/head.ejs
+++ b/views/scbl/partials/head.ejs
@@ -169,16 +169,18 @@ body
 
 .board
 {
-  border-collapse: collapse;
+  /*border-collapse: collapse;*/
   position: relative;
-  top: 300px;
-  left: 300px;
+  top: 120px;
+  left: 540px;
 }
 
 .board td
 {
-  width: 30px;
-  height: 30px;
+  border: 2px solid #00000000;
+  border-radius: 11px;
+  width: 56px;
+  height: 56px;
 }
 
 .normal
@@ -186,14 +188,24 @@ body
   background-color: #00FF00;
 }
 
-.red
+.threeXword
 {
   background-color: #FF0000;
 }
 
-.pink
+.twoXword
 {
   background-color: pink;
+}
+
+.twoXletter
+{
+  background-color: lightblue;
+}
+
+.threeXletter
+{
+  background-color: blue;
 }
 
 </style>
