--- a/views/scbl/pages/index.ejs
+++ b/views/scbl/pages/index.ejs
@@ -9,6 +9,8 @@
       <%- include ('../partials/board') %>
       <%- include ('../partials/playerboxes', {playerboxStartPos: playerboxStartPos}); -%>
       <%- include ('../../common/webcams', {webcamPos: webcamPos, fixedPlayers:fixedPlayers}); -%>
+      <%- include ('../partials/openbox') %>
+      <%- include ('../partials/touchboxes') %>
       <%- include ('../partials/decks') %>
       <%- include ('../../common/cursors'); -%>
     </div>
