--- a/views/scbl/partials/head.ejs
+++ b/views/scbl/partials/head.ejs
@@ -83,8 +83,8 @@ body
 .deck
 {
   background-color: grey;
-  width: 134px;
-  height: 172px;
+  width: 117px;
+  height: 165px;
 }
 
 .playcard
@@ -95,15 +95,15 @@ body
 
 .tile
 {
-  width: 88px;
-  height: 85px;
+  width: 68px;
+  height: 68px;
   background-color: #ffffff;
   padding: 5px;
-  font-size: 48px;
+  font-size: 35px;
   font-family: "Arial", sans;
   font-weight: bold;
   text-align: center;
-  border-radius: 20px;
+  border-radius: 12px;
 }
 
 .moveBtn
@@ -140,57 +140,62 @@ body
 
 #player0box
 {
-  width: 1590px;
-  height: 240px;
+  width: 320px;
+  height: 540px;
 }
 
 #player1box
 {
-  width: 1590px;
-  height: 240px;
+  width: 320px;
+  height: 540px;
 }
 
 #player2box
 {
   width: 320px;
-  height: 830px;
+  height: 540px;
 }
 
 #player3box
 {
   width: 320px;
-  height: 830px;
+  height: 540px;
 }
 
 .points
 {
-  font-size: 20px;
+  font-size: 15px;
 }
 
 .board
 {
   /*border-collapse: collapse;*/
+  table-layout: fixed;
+  width: 1080px;
   position: relative;
-  top: 120px;
-  left: 540px;
+  top: 0px;
+  left: 818px;
 }
 
 .board td
 {
-  border: 2px solid #00000000;
+  border: 2px solid #000000;
   border-radius: 11px;
-  width: 56px;
-  height: 56px;
+  width: 72px;
+  height: 72px;
+  font-weight: bold;
+  text-align: center;
 }
 
 .normal
 {
-  background-color: #00FF00;
+  background-color: #009c1a;
 }
 
 .threeXword
 {
   background-color: #FF0000;
+  color: #FFFFFF;
 }
 
 .twoXword
@@ -205,7 +210,19 @@ body
 
 .threeXletter
 {
+  color: #FFFFFF;
   background-color: blue;
+}
+
+.touchbox
+{
+  background-color: #CCCCCC;
+  opacity: 0.5;
+  border: 1px solid orange;
+  border-radius: 11px;
+  width: 68px;
+  height: 68px;
+  z-index: 2;
 }
 
 </style>
