--- a/views/lobby/partials/games.ejs
+++ b/views/lobby/partials/games.ejs
@@ -32,3 +32,8 @@
   <a href='strg'><img src='/img/strg/stratego.svg'/></a>
 </div>
 <div class="card moveBtn" id="gamecardMoveBtn6"><img src="/img/lobby/move.png"/></div>
+
+<div class="gamecard" id='gamecard7'>
+  <a href='scbl'><img src='/img/strg/stratego.svg'/></a>
+</div>
+<div class="card moveBtn" id="gamecardMoveBtn7"><img src="/img/lobby/move.png"/></div>
