--- a/views/lobby/partials/games.ejs
+++ b/views/lobby/partials/games.ejs
@@ -34,6 +34,6 @@
 <div class="card moveBtn" id="gamecardMoveBtn6"><img src="/img/lobby/move.png"/></div>
 
 <div class="gamecard" id='gamecard7'>
-  <a href='scbl'><img src='/img/strg/stratego.svg'/></a>
+  <a href='scbl'><img src='/img/scbl/scrabble.svg'/></a>
 </div>
 <div class="card moveBtn" id="gamecardMoveBtn7"><img src="/img/lobby/move.png"/></div>
