--- a/views/common/cursors.ejs
+++ b/views/common/cursors.ejs
@@ -3,3 +3,5 @@
     <div class='cursor' id='cursor<%= i %>'></div> 
   <% } %>
 </div>
+
+<img src="/img/common/check.svg" class="touchindicator" style="display: none; position:absolute; z-index: 1000"/>
