--- a/views/rmk/pages/index.ejs
+++ b/views/rmk/pages/index.ejs
@@ -8,6 +8,7 @@
     <div class="scaleplane">
       <%- include ('../partials/playerboxes', {playerboxStartPos: playerboxStartPos}); -%>
       <%- include ('../../common/webcams', {webcamPos: webcamPos, fixedPlayers:fixedPlayers}); -%>
+      <%- include ('../partials/touchboxes') %>
       <%- include ('../partials/decks') %>
       <%- include ('../../common/cursors'); -%>
     </div>
