--- a/views/rmk/partials/head.ejs
+++ b/views/rmk/partials/head.ejs
@@ -162,4 +162,15 @@ body
   height: 830px;
 }
 
+.touchbox
+{
+  background-color: #CCCCCC;
+  opacity: 0.5;
+  border: 1px solid orange;
+  border-radius: 11px;
+  width: 84px;
+  height: 81px;
+  z-index: 2;
+}
+
 </style>
