--- a/views/strg/pages/index.ejs
+++ b/views/strg/pages/index.ejs
@@ -10,6 +10,7 @@
       <%- include ('../partials/playerboxes', {playerboxStartPos: playerboxStartPos}); -%>
       <%- include ('../../common/webcams', {webcamPos: webcamPos, fixedPlayers:fixedPlayers}); -%>
       <%- include ('../partials/pieces') %>
+      <%- include ('../partials/touchboxes') %>
       <%- include ('../partials/cheatsheet') %>
       <%- include ('../../common/cursors'); -%>
     </div>
