--- a/views/strg/partials/head.ejs
+++ b/views/strg/partials/head.ejs
@@ -220,4 +220,16 @@ body
   font-weight: bold;
 }
 
+.touchbox
+{
+  background-color: #CCCCCC;
+  opacity: 0.5;
+  border: 1px solid orange;
+  border-radius: 11px;
+  width: 86px;
+  height: 86px;
+  z-index: 2;
+}
+
+
 </style>
