--- a/views/scbl/partials/head.ejs
+++ b/views/scbl/partials/head.ejs
@@ -162,6 +162,30 @@ body
   height: 540px;
 }
 
+#scorebox0
+{
+  top: 175px;
+  left: 10px;
+}
+
+#scorebox1
+{
+  top: 175px;
+  left: 508px;
+}
+
+#scorebox2
+{
+  top: 795px;
+  left: 10px;
+}
+
+#scorebox3
+{
+  top: 795px;
+  left: 508px;
+}
+
 .points
 {
   font-size: 15px;
