--- a/views/common/scorebox.ejs
+++ b/views/common/scorebox.ejs
@@ -1,9 +1,9 @@
-<div class="scorebox" id="scorebox<%= scoreboxId %>" style="background-color: #CCCCCC; padding: 5px; position: absolute; z-index: 3" value="<%= scoreboxId %>">
+<div class="scorebox" id="scorebox<%= scoreboxId %>" style="background-color: #CCCCCC; padding: 5px; position: absolute; z-index: 3; border-radius: 5px;" value="<%= scoreboxId %>">
   <% for (scoreboxValue of scoreboxValues) { -%>
-    <button type="button" class="btn btn-primary scoreboxButton" id="scorebox<%= scoreboxId %>_plus_<%= scoreboxValue %>" value="+<%= scoreboxValue %>">+<%= scoreboxValue %></button>
+    <button type="button" class="btn btn-primary scoreboxButton" id="scorebox<%= scoreboxId %>_plus_<%= scoreboxValue %>" value="+<%= scoreboxValue %>" style="width: 60px; font-size: 18px;">+<%= scoreboxValue %></button>
   <% } -%>
-  <div class="scoreboxText" id="scorebox<%= scoreboxId%>_text" style="text-align: center; width: 100%">0</div>
+  <div class="scoreboxText" id="scorebox<%= scoreboxId%>_text" style="text-align: center; width: 100%; font-weight: bold; font-size: 25px; padding: 3px; border-radius: 3px; background-color: #000000; color: #FF0000;">0</div>
   <% for (scoreboxValue of scoreboxValues) { -%>
-    <button type="button" class="btn btn-primary scoreboxButton" id="scorebox<%= scoreboxId %>_min_<%= scoreboxValue %>" value="-<%= scoreboxValue %>">-<%= scoreboxValue %></button>
+    <button type="button" class="btn btn-primary scoreboxButton" id="scorebox<%= scoreboxId %>_min_<%= scoreboxValue %>" value="-<%= scoreboxValue %>" style="width: 60px; font-size: 18px;">-<%= scoreboxValue %></button>
   <% } -%>
 </div>
