--- a/views/sh/partials/playerboxes.ejs
+++ b/views/sh/partials/playerboxes.ejs
@@ -1,4 +1,4 @@
 <% for (var i = 0; i < 10;  i++ ) { %>
 	<div class="playerbox" id="player<%= i %>box" style="top: <%= playerboxStartPos[i].top - 3 %>px; left: <%= playerboxStartPos[i].left %>px"></div>
-  <div class="playerName" style="top: <%= playerboxStartPos[i].top %>px; left: <%= playerboxStartPos[i].left %>px"><span class="playerNameText" id="player<%= i %>NameText"></span></div>
+  <div class="playerName" id="player<%= i %>Name" style="top: <%= playerboxStartPos[i].top %>px; left: <%= playerboxStartPos[i].left %>px"><span class="playerNameText" id="player<%= i %>NameText"></span></div>
 <% } %>
