--- a/views/fkar/partials/head.ejs
+++ b/views/fkar/partials/head.ejs
@@ -75,6 +75,7 @@
     opacity: 0.5;
     border-radius: 4px;
     border: 1px solid grey;
+    display: none;
   }
 
   .playerName
@@ -85,7 +86,7 @@
     top: 20px;
     text-align: center;
     z-index: 10;
-    
+    display: none;
   }
 
   .playerNameText
@@ -97,6 +98,7 @@
     border: 1px solid black;
     display: inline-block;
     border-radius: 3px;
+    display: none;
   }
 
   .card
