--- a/views/sh/partials/head.ejs
+++ b/views/sh/partials/head.ejs
@@ -74,6 +74,7 @@
 		opacity: 0.5;
 		border-radius: 4px;
 		border: 1px solid grey;
+    display: none;
 	}
 
 	.playerName
@@ -84,7 +85,7 @@
 		top: 20px;
 		text-align: center;
     z-index: 10;
-		
+		display: none;
 	}
 
 	.playerNameText
@@ -96,6 +97,7 @@
 		border: 1px solid black;
 		display: inline-block;
 		border-radius: 3px;
+    display: none;
 	}
 
 	.card
