--- a/views/common/resetModal.ejs
+++ b/views/common/resetModal.ejs
@@ -4,7 +4,9 @@
       <div class="modal-body">
       </div>
       <div class="modal-footer">
-        <button type="button" id="resetGameBtn" class="btn btn-primary btn-lg" style="width: 110px;">RESET</button>
+        <button type="button" id="resetGameBtn" class="btn btn-primary btn-lg" style="width: 110px;">RESET</button><br>
+        <button type="button" id="takeSnapshotBtn" class="btn btn-secondary btn-lg" style="width: 180px;">Take Snapshot</button>
+        <button type="button" id="recoverSnapshotBtn" class="btn btn-secondary btn-lg" style="width: 180px;">Recover Snapshot</button>
       </div>
     </div>
   </div>
