--- a/views/sh/partials/policies.ejs
+++ b/views/sh/partials/policies.ejs
@@ -1,3 +1,4 @@
 <% for (var i = 0; i < 17;  i++ ) { %>
-	<div class='card policy' id='policy<%= i %>'><img src='/img/sh/policy-l.png'/></div> 
+	<!-- <div class='card policy' id='policy<%= i %>'><img src='/img/sh/policy-l.png'/></div>  -->
+	<div class='card policy' id='policy<%= i %>'></div>
 <% } %>
