--- a/views/lobby/partials/games.ejs
+++ b/views/lobby/partials/games.ejs
@@ -37,3 +37,8 @@
   <a href='scbl'><img src='/img/scbl/scrabble.svg'/></a>
 </div>
 <div class="card moveBtn" id="gamecardMoveBtn7"><img src="/img/lobby/move.png"/></div>
+
+<div class="gamecard" id='gamecard8'>
+  <a href='soc'><img src='/img/soc/settlersOfCatan.svg'/></a>
+</div>
+<div class="card moveBtn" id="gamecardMoveBtn8"><img src="/img/lobby/move.png"/></div>
