--- a/views/soc/partials/head.ejs
+++ b/views/soc/partials/head.ejs
@@ -274,5 +274,21 @@ body
     height: 100px;
 }
 
+#diceDeck
+{
+  width: 260px;
+  height: 170px;
+}
+
+#dice1 .threeDcontainer
+{
+    transition: transform 3s;
+}
+
+#dice2 .threeDcontainer
+{
+    transition: transform 3.5s;
+}
+
 
 </style>
